--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <style>
+        
+    </style>
 </head>
 <body>
 
@@ -62,6 +65,7 @@
         <p>I believe in the importance of continuous learning and collaboration, which is why I enjoy working in team environments where I can share ideas and gain insights from others.</p>
         <p>In addition to my academic pursuits, I have a creative side that I express through painting. This hobby allows me to unwind and think outside the box.</p>
         <p>In my free time, I love playing cricket and swimming, both of which keep me active and help me build a balanced lifestyle. As I look forward to starting my career in tech, I am eager to connect with like-minded professionals and explore opportunities that allow me to grow and make a meaningful impact in the industry. Feel free to reach out!</p>
+        <a href="Resume_Me.pdf" class="btn">See Resume</a>
 </section>
 
 <!-- Projects Section -->
