--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section id="home" class="hero">
     <div class="home-content">
         <div class="home-image">
-            <img src="Photograph_Dipan.jpg" alt="Your Name">
+            <img src="Photograph_Dipan.png" alt="Your Name">
         </div>
         <div class="home-details">
             <h1>Hello, I'm Dipan Dutta</h1>
