--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>I believe in the importance of continuous learning and collaboration, which is why I enjoy working in team environments where I can share ideas and gain insights from others.</p>
         <p>In addition to my academic pursuits, I have a creative side that I express through painting. This hobby allows me to unwind and think outside the box.</p>
         <p>In my free time, I love playing cricket and swimming, both of which keep me active and help me build a balanced lifestyle. As I look forward to starting my career in tech, I am eager to connect with like-minded professionals and explore opportunities that allow me to grow and make a meaningful impact in the industry. Feel free to reach out!</p>
-        <a href="Resume_Me.pdf" class="btn">See Resume</a>
+        <a href="Resume_Me.pdf" class="btn">View My Resume</a>
 </section>
 
 <!-- Projects Section -->
